# src/main/java/com/example/swaggerguide/model/Visit.java
@@ -10,37 +10,36 @@ public class Visit {
     @Column(name = "id", nullable = false)
     private Long id;
 
-    @ManyToOne
-    @JoinColumn(name = "pet_id")
-    private Pet pet;
-
-    @Column(name = "quantity")
-    private Integer quantity;
-
     @Column(name = "date")
     private OffsetDateTime date;
 
-    @Column(name = "complete")
-    private Boolean complete;
+    @Column(name = "veterinarian_name")
+    private String veterinarianName;
 
-    public Long getId() {return id;}
+    @Column(name = "clinic_name")
+    private String clinicName;
 
-    public void setId(Long id) {this.id = id;}
+    @ManyToOne
+    @JoinColumn(name = "pet_id")
+    private Pet pet;
 
     public Pet getPet() {return pet;}
 
     public void setPet(Pet pet) {this.pet = pet;}
 
-    public Integer getQuantity() {return quantity;}
+    public Long getId() {return id;}
 
-    public void setQuantity(Integer quantity) {this.quantity = quantity;}
+    public void setId(Long id) {this.id = id;}
 
     public OffsetDateTime getDate() {return date;}
 
     public void setDate(OffsetDateTime date) {this.date = date;}
 
-    public Boolean getComplete() {return complete;}
+    public String getVeterinarianName() {return veterinarianName;}
 
-    public void setComplete(Boolean complete) {this.complete = complete;}
+    public void setVeterinarianName(String veterinarianName) {this.veterinarianName = veterinarianName;}
 
+    public String getClinicName() {return clinicName;}
+
+    public void setClinicName(String clinicName) {this.clinicName = clinicName;}
 }
